samples/_failures_safe/1761601912_f23f3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2778c272.c: In function ‘main’:
./samples/SAFE/__tmp_2778c272.c:189:12: error: missing terminating " character
  189 |     printf("Initial state: ID
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2778c272.c:189:5: error: expected expression at end of input
  189 |     printf("Initial state: ID
      |     ^~~~~~
./samples/SAFE/__tmp_2778c272.c:189:5: error: expected declaration or statement at end of input
